updated stylest=heet to get rid of ugly colors

--- a/style.css
+++ b/style.css
@@ -3,23 +3,23 @@ html {
 	margin:0;
 	padding:0;
 	color:#000;
-	background:#a7a09a;
+	background:#ffffff;
 }
 #wrap {
 	width:750px;
 	margin:0 auto;
-	background:#99c;
+	background:#ffffff;
 }
 #header {
    	padding:5px 10px;
-	background:#ddd;
+	background:#ffffff;
 }
 h1 {
     margin:0;
    }
 #nav {
 	padding:5px 10px;
-	background:#c99;
+	background:#ffffff;
 }
 #nav ul {
 	margin:0;
@@ -35,7 +35,7 @@ h1 {
 	float:left;
 	width:480px;
 	padding:10px;
-	background:#9c9;
+	background:#ffffff;
 }
 h2 {
 	margin:0 0 1em;
@@ -44,12 +44,12 @@ h2 {
 	float:right;
 	width:230px;
 	padding:10px;
-	background:#99c;
+	background:#ffffff;
 }
 #footer {
 	clear:both;
 	padding:5px 10px;
-	background:#cc9;
+	background:#ffffff;
 }
 #footer p {
 	margin:0;
