--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ html {
 	color:#000;
 	background:#ffffff;
 }
+body{
+    background-color:#4b5980; 
+    background-image:url(background.jpg);
+    background-repeat:repeat-y;
+    font-family: arial, helvetica, sans-serif;
+        font-size: 16px;
+        color: black;
+    	text-align: left;
+}
 #wrap {
 	width:750px;
 	margin:0 auto;
@@ -65,8 +74,7 @@ body {
 .Stil1 {
 	font-size: 16px;
 	font-weight: bold;
-	font-family: Arial, Helvetica, sans-serif;
-	}
+}
 
 
 p.menulink a:link, p.menulink a:visited 
@@ -75,8 +83,7 @@ p.menulink a:link, p.menulink a:visited
 	color: #FFFFFF;
 	font-size: 16px;
 	font-weight: bold;
-	font-family: Arial, Helvetica, sans-serif;
-	}
+}
 
 p.menulinksmall a:link, p.menulinksmall a:visited 
 	{
@@ -84,8 +91,7 @@ p.menulinksmall a:link, p.menulinksmall a:visited
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
-	font-family: Arial, Helvetica, sans-serif;
-	}
+}
 
 #borderyellow {
   border-width:2px;
@@ -99,5 +105,21 @@ p.menulinksmall a:link, p.menulinksmall a:visited
   border-style:solid;
   border-color: #475989;
   padding:0.5em;
+}
+
+h1{
+color: black;
+text-align: center;
+}
+h2{
+color: black;}
+
+h3{
+color: black;
+text-align: center;
+}
+h4{
+color: black;
+text-align: center;
 }
 
